# mbot_ros2_ws

./: .gitignore  .gitmodules  README.md
mbot_bringup/: mbot_demo_bringup.sh  package.xml  setup.py
mbot_bringup/launch/: mbot_bringup.launch.py  mbot_viz.launch.py
mbot_description/: CMakeLists.txt  README.md  package.xml
mbot_interfaces/: CMakeLists.txt  package.xml
mbot_navigation/: CMakeLists.txt  README.md  package.xml
mbot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_toolbox_hallway_mapping.yaml  slam_toolbox_localization.yaml  slam_toolbox_online_async.yaml
mbot_navigation/launch/: localization_launch.py  nav2_navigation.launch.py  navigation_launch.py  online_async_launch.py  slam_exploration_launch.py  slam_toolbox_localization.launch.py  slam_toolbox_online_async_launch.py  view_map.launch.py
mbot_navigation/maps/: .placeholder  map-550-lab.pgm  map-550-lab.yaml
mbot_navigation/rviz/: localization.rviz  mapping.rviz  navigation.rviz  view_map.rviz
mbot_navigation/scripts/: bruteforce_frontier_explorer.py  frontier_explorer.py  simple_explorer.py  wavefront_frontier_explorer.py
mbot_ros_bridge/: README.md  package.xml  setup.cfg  setup.py
mbot_tools/: README.md  cpu_power_monitor.py  cpu_power_plotting.ipynb  cpu_usage_monitor.py  cpu_usage_plotting.ipynb  ros_lidar_msg_test.py
mbot_vision/: README.md  package.xml  setup.cfg  setup.py
mbot_vision/calibration/: .placeholder  ost.txt  ost.yaml
mbot_vision/config/: camera.yaml  marker.yaml  tags_custom48h12.yaml
mbot_vision/launch/: apriltag.launch.py  apriltag_with_photos.launch.py  calibration_marker.launch.py  camera.launch.py  camera_rectify.launch.py
mbot_vision/mbot_vision/: apriltag_photo_capture.py  calibration_marker.py
mbot_vision/media/: .placeholder
mbot_vision/resource/: mbot_vision
(+16 files in other folders)
