<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbot_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xssun@umich.edu">Shaw</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>camera_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
